--- a/Face Invaders/res/layout/activity_main.xml
+++ b/Face Invaders/res/layout/activity_main.xml
@@ -4,11 +4,24 @@
     android:layout_height="match_parent" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/hello_world"
         tools:context=".MainActivity" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView1"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_marginBottom="36dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="78dp"
+        android:src="@drawable/ic_hamm" />
 
 </RelativeLayout>
